<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Text Client</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Please sign in below:</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="attempts">Attempts:</string>
    <string name="title_activity_blank">BlankActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="scan">Scan</string>
    <string name="room">Room</string>

</resources>
